--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a:hover{
   text-decoration: underline;
 }
 form{
-  margin-top: 100px;
+  
   margin-left:auto;
   margin-right:auto;
   display:flex;
@@ -48,8 +48,7 @@ form img{
   grid-template-rows: 3fr 3fr;
   background-color: rgba(0,0,0,0.1);
   width:100%;
-  position:absolute;
-  bottom:0;
+  
 }
 #bottom-bar{
   border-top:1px solid rgba(0,0,0,0.25);
@@ -125,6 +124,12 @@ input[type="submit"]:hover{
 }
 .show{
   display: block;
+}
+body{
+  height:100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
